Ignore models in git

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,7 @@ scratchpad*
 .vscode/*
 tools/
 data/
+*.pth
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
