--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ scratchpad*
 tools/
 data/
 *.pth
+*.npy
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
